syntax = "proto3";

package io.github.xezzon.geom.dict;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_outer_classname = "DictProto";
option java_package = "io.github.xezzon.geom.dict";

// 字典请求
message DictReq {
  // 字典目
  optional string tag = 1;
}

// 字典响应
message DictResp {
  string id = 1;
  // 字典目
  string tag = 2;
  // 字典键
  string code = 3;
  // 字典值
  string label = 4;
  // 排序号
  int32 ordinal = 5;
  // 上级ID
  string parent_id = 6;
}

message DictListResp {
  repeated DictResp data = 1;
}

message DictImportReq {
  optional string tag = 1;
  string code = 2;
  optional string label = 3;
  int32 ordinal = 4;
}

message DictImportReqList {
  repeated DictImportReq data = 1;
}

// 字典相关的服务间接口
service Dict {
  // 根据字典目获取字典列表
  rpc GetDictListByTag(DictReq) returns (DictListResp);
  // 导入字典
  rpc ImportDict(DictImportReqList) returns (google.protobuf.Empty);
}
